--- a/opengl_test_6_1/opengl_test_6_1/README
+++ b/opengl_test_6_1/opengl_test_6_1/README
@@ -1,1 +1,6 @@
-This simple show how to use vbo.
+This simple show how to use VBO.
+If you want to know VBO for more, see http://www.cnblogs.com/wustlj/p/3139559.html.
+
+Welocme to contact with me!
+Gamil:wustkalou@gmail.com
+Blog:http://www.cnblogs.com/wustlj
