add simple cube with texture

--- a/README
+++ b/README
@@ -1,3 +1,6 @@
 It's used for OpenGLES studying!
 Welcome to my blog! http://www.cnblogs.com/wustlj
 Gmail:wustkalou@gmail.com
+
+——————————————————————————————————————————————————————
+opengl_test_1:simple project for OpenGL on Xcode,clean the screen with red color.
